pw/branches/r1117/Vendor/FLSDK/PscApi.h

//
//	Common initialization functions
//

// Start initialization (first service)
unsigned __int32 __stdcall PSC_StartInitialization(
	unsigned __int32 initializationType );
// Finish initialization
unsigned __int32 __stdcall PSC_FinishInitializationSuccess();
// Finish initialization
unsigned __int32 __stdcall PSC_FinishInitializationFailure();
// Uninitialization (last service)
unsigned __int32 __stdcall PSC_Uninitialize();
// Additional initialization at valid license
unsigned __int32 __stdcall PSC_PerformInitializationAtValidLicense();
unsigned __int32 __stdcall PSC_InitializeDemoMode();
//
//	Miscellaneous functions
//

// Get detailed error information
unsigned __int32 __stdcall PSC_GetErrorInformation(
	unsigned __int32 *infoBuffer,
	size_t *infoBufferSizeInElements,
	char *usedKeyBuffer,
	size_t *usedKeyBufferSizeInChars );
unsigned __int32 __stdcall PSC_GetLicenseId(
	unsigned __int32 *identifier );
// Load localized string
unsigned __int32 __stdcall PSC_LoadString(
	unsigned __int32 stringId,
	wchar_t *stringBuffer,
	size_t *stringBufferSizeInWideChars );
// Enter global critical section (for license access)
unsigned __int32 __stdcall PSC_EnterGlobalCriticalSection();
// Leave global critical section (for license access)
unsigned __int32 __stdcall PSC_LeaveGlobalCriticalSection();
// Search disc and get label
unsigned __int32 __stdcall PSC_DiscSearchDisc2(
	char *labelBuffer,
	size_t *labelBufferSize,
	unsigned __int32 *type );
// Try to load disc license from registry
unsigned __int32 __stdcall PSC_DiscLoadLicenseFromRegistry(
	char *keyBuffer,
	size_t *keyBufferSize );
// Try to create disc license based on key written on the disc
unsigned __int32 __stdcall PSC_DiscCreateLicenseFromDisc();
// Test key and if it is valid create license and write it into system registry
unsigned __int32 __stdcall PSC_DiscTestNewKeyAndWriteLicenseForValidDiscKey(
	const char *key );
// Try rescue license (optionally preserve existed disc license)
unsigned __int32 __stdcall PSC_DiscTryRescueLicense(
	bool restoreExistedDiscLicenseOnError );
// Create or load rescue license and get hardware code
unsigned __int32 __stdcall PSC_DiscCreateOrLoadRescueLicenseAndGetHardwareCode(
	char *hardwareCodeBuffer,
	size_t *hardwareCodeBufferSize );
// Activate loaded rescue license
unsigned __int32 __stdcall PSC_DiscActivateAndStoreRescueLicense(
	const char *key );
// Try disc license (i.e. check disc)
unsigned __int32 __stdcall PSC_DiscTryDiscLicense();
unsigned __int32 __stdcall PSC_DiscCreateAutogeneratedLicense();